manifests/_original/1_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-monolithic-java-deployment
  namespace: acmeair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acmeair
  template:
    metadata:
      labels:
        app: acmeair
        tier: monolithic
    spec:
      containers:
      - name: acmeair-java
        image: quay.io/cbade_cs/acmeair_test:acmeair-demo #IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
