manifests/_original/1_app_alt.yaml
apiVersion: apps/v1 #extensions/v1beta1
kind: Deployment
metadata:
  name: acmeair-monolithic-java-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acmeair
  template:
    metadata:
      labels:
        app: acmeair
        tier: monolithic
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        node.openshift.io/os_id: rhcos
      containers:
      - name: acmeair-java
        image: quay.io/cbade_cs/acmeair_test:acmeair-demo #IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
