manifests/_original/2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acmeair-monolithic-service
  labels:
    app: acmeair
    tier: monolithic
spec:
  ports:
  - protocol: TCP
    port: 443
    name: http
  selector:
    app: acmeair
    tier: monolithic
