manifests/_original/3_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-route
  namespace: acmeair
  labels:
    service: acmeair-monolithic-service
spec:
  to:
    kind: Service
    name: acmeair-monolithic-service
  port:
    targetPort: '9080'
